--- a/web/package.json
+++ b/web/package.json
@@ -30,7 +30,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.6",
+    "next-pwa": "^5.6.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "workbox-window": "^7.3.0"
   }
 }
